--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -29,11 +29,11 @@
 					previous-text="{{'pagination.previous' | translate}}"
 					next-text="{{'pagination.next' | translate}}"
 					last-text="{{'pagination.last' | translate}}"
-					ng-model="$parent.formData.currentPage" items-per-page="itemsPerPage"
+					ng-model="$parent.formData.currentPage" items-per-page="formData.itemsPerPage"
 					max-size="maxSize" class="pagination-sm pull-right" boundary-links="true"
 					rotate="false" num-pages="numPages" style="margin: auto;" />
 		<span class="input-group-addon" style="padding: 0px 5px 0px 3px; border: 0px; background: none;">
-			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="$parent.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
+			<select style="height: 28px;" ng-options="option for option in [5,10,20,30,40,50,100] track by option" ng-model="formData.itemsPerPage" ng-change="changeItemPerPage()"></select>&nbsp;{{'pagination.per_page' | translate}}								
 		</span>
 	</div>
 </div>
@@ -43,16 +43,16 @@
 		<table class="table table-striped table-hover">
 			<thead>
 				<tr>
-					<th>ลำดับที่</th>
-					<th>ชื่อ</th>
-					<th>ประเภทสมาชิก</th>
-					<th>สถานะ</th>
-					<th>กระทำ</th>
+					<th style="width: 10%;">ลำดับที่</th>
+					<th style="width: 30%;">ชื่อ</th>
+					<th style="width: 20%;">ประเภทสมาชิก</th>
+					<th style="width: 20%;">สถานะ</th>
+					<th style="width: 20%;">กระทำ</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="data in datas track by $index">
-					<td>{{ $index + 1}}</td>
+					<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 					<td>{{ data.firstname }} {{ data.lastname }}</td>
 					<td>{{ data.memberTypeName }}</td>
 					<td>
