--- a/backend/src/main/webapp/app/views/receipt/add.html
+++ b/backend/src/main/webapp/app/views/receipt/add.html
@@ -1,32 +1,44 @@
 <div>
 	<div class="col-lg-6">
 		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="row">
+			<div class="row" ng-hide="serviceTypeId == 5">
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.sender.$invalid || existingUserShowErrMsg}">
 					<label class="control-label">ผู้ส่ง </label>
 					<input name="sender" class="form-control" ng-model="data.sender">
 				</div>
-				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.tel.$invalid || existingUserErrMsg}">
-					<label class="control-label">เบอร์โทร</label>
-					<input name="tel" class="form-control" ng-model="data.tel">
-				</div>
-			</div>
-			<div class="row">
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.receiver.$invalid || existingUserErrMsg}">
 					<label class="control-label">ผู้รับ *</label>
 					<input name="receiver" class="form-control" ng-model="data.receiver" required>
 				</div>
+			</div>
+			<div class="form-group" ng-class="{'has-error':addUserForm.postDest.$invalid || existingUserErrMsg}" ng-show="serviceTypeId == 1 || serviceTypeId == 3">
+				<label class="control-label">ไปรษณีปลายทาง *</label>
+				<input name="postDest" class="form-control" ng-model="data.postDest" required>
+			</div>
+			<div class="row" ng-show="serviceTypeId == 5">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.receiver.$invalid || existingUserErrMsg}">
+					<label class="control-label">ชื่อบัญชี *</label>
+					<input name="receiver" class="form-control" ng-model="data.receiver" required>
+				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.postDest.$invalid || existingUserErrMsg}">
-					<label class="control-label">ไปรษณีปลายทาง *</label>
+					<label class="control-label">ธนาคาร *</label>
 					<input name="postDest" class="form-control" ng-model="data.postDest" required>
 				</div>
 			</div>
-		
-			<div class="form-group" ng-class="{'has-error':addUserForm.amount.$invalid || existingUserErrMsg}">
-				<label class="control-label">จำนวนเงิน *</label>
+			<div class="form-group" ng-class="{'has-error':addUserForm.amount.$invalid || existingUserErrMsg}" ng-show="serviceTypeId == 5">
+				<label class="control-label">เลขบัญชี *</label>
 				<input name="amount" type="number" class="form-control" ng-model="data.amount" required>
+			</div>			
+			<div class="row">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.tel.$invalid || existingUserErrMsg}">
+					<label class="control-label">เบอร์โทร</label>
+					<input name="tel" class="form-control" ng-model="data.tel">
+				</div>
+				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.amount.$invalid || existingUserErrMsg}">
+					<label class="control-label">จำนวนเงิน *</label>
+					<input name="amount" type="number" class="form-control" ng-model="data.amount" required>
+				</div>
 			</div>
-			
 			<div class="row">
 				<div class="form-group col-lg-6" ng-class="{'has-error':addUserForm.fee.$invalid || existingUserErrMsg}">
 					<label class="control-label">ค่าธรรมเนียม</label>
@@ -50,6 +62,7 @@
 			<div style="text-align: center;">
 				<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
 				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
+				<button type="submit" class="btn btn-outline btn-danger btn-lg" style="width: 120px;" ng-disabled="addUserForm.$invalid">Print</button>
 			</div>
 		</form>
 	</div>
