--- a/backend/src/main/webapp/app/views/register/main.html
+++ b/backend/src/main/webapp/app/views/register/main.html
@@ -9,6 +9,11 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
+                	<div style="position: absolute; left: 50%;" ng-show="url == 'search'">
+						<div style="color: black; position: relative; left: -50%; top: -40px; border: dotted green 1px;">
+				            <img alt="" src="http://localhost:8080/backend/app/img/Winnie.png" width="100" border="0">
+				        </div>
+					</div>
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
                     <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
