--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -20,7 +20,9 @@
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
 					<label class="control-label">ภาพถ่ายหน้าตรง *</label>
-					<input tabindex="6" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
+					<!-- <input tabindex="6" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required> -->
+					<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" />
 				</div>
 			</div>
 			<div class="row">
