--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -22,7 +22,7 @@
 					<label class="control-label">ภาพถ่ายหน้าตรง *</label>
 					<!-- <input tabindex="6" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required> -->
 					<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
-					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" />
+					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" style="width: 220px;" />
 				</div>
 			</div>
 			<div class="row">
