--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -2,7 +2,13 @@
 	<form name="persistForm" ng-submit="isEdit ? update() : save()" novalidate>
 		
 		<div class="col-lg-6 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px; margin-right: 10px;">
-			<i class="fa fa-child fa-lg" style="position: absolute; left: 243px; top: -7px; color: #337AB7;"></i>
+			
+			<div style="position: absolute; left: 50%;">
+				<div style="position: relative; left: -50%; top: -15px;">
+		            <i class="fa fa-child fa-lg" style="color: #337AB7;"></i>
+		        </div>
+			</div>
+			
 			<div class="row">
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
 					<label class="control-label">คำนำหน้าชื่อ *</label>
@@ -31,8 +37,16 @@
 					<input tabindex="3" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
-					<label class="control-label">รหัสจากเครื่อง Finger Scan *</label>
-					<input tabindex="7" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
+					<!-- <label class="control-label">ประเภทสมาชิก *</label>
+					<input tabindex="8" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required> -->
+					
+					<label class="control-label">เลือกสิทธิ *</label>
+					<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
+						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+				    </select>
+					
 				</div>
 			</div>
 			<div class="row">
@@ -41,8 +55,8 @@
 					<input tabindex="4" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
-					<label class="control-label">ประเภทสมาชิก *</label>
-					<input tabindex="8" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
+					<label class="control-label">รหัสจากเครื่อง Finger Scan *</label>
+					<input tabindex="7" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
 			</div>	
 			
@@ -60,27 +74,40 @@
 					<label class="control-label">Re-Password *</label>
 					<input tabindex="17" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
+				
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
+					<label class="control-label">เลือกสิทธิ *</label>
+					<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
+						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+				    </select>
+	             </div>
+	             
+	             <div class="form-group col-lg-6">
+	                 <label class="control-label">สถานะ &nbsp;&nbsp;</label>
+	                 <div class="radio">
+		                 <label class="radio-inline">
+		                     <input tabindex="18" type="radio" name="status" value="0" ng-checked="data.status == 0" ng-model="data.status">เปิด
+		                 </label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="status" value="1" ng-checked="data.status == 1" ng-model="data.status">ปิด
+		                 </label>
+	                 </div>
+	             </div>
 			</div>
-			
-			<div class="form-group">
-                 <label>สถานะ &nbsp;&nbsp;</label>
-                 <label class="radio-inline">
-                     <input tabindex="18" type="radio" name="status" value="0" ng-checked="data.status == 0" ng-model="data.status">เปิด
-                 </label>
-                 <label class="radio-inline">
-                     <input type="radio" name="status" value="1" ng-checked="data.status == 1" ng-model="data.status">ปิด
-                 </label>
-             </div>
 		</div>
 	
 	
 	
-	
-	
-	
-	
 		<div class="col-lg-5 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
-			<i class="fa fa-home fa-lg" style="position: absolute; left: 200px; top: -7px; color: #337AB7;"></i>
+			
+			<div style="position: absolute; left: 50%;">
+				<div style="position: relative; left: -50%; top: -15px;">
+		            <i class="fa fa-home fa-lg" style="color: #337AB7;"></i>
+		        </div>
+			</div>
+			
 	        <div class="row">
 				<div class="form-group col-lg-6">
 					<label class="control-label">เบอร์โทร *</label>
