--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -4,8 +4,8 @@
 		<div class="col-lg-6 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px; margin-right: 10px;">
 			
 			<div style="position: absolute; left: 50%;">
-				<div style="position: relative; left: -50%; top: -15px;">
-		            <i class="fa fa-child fa-lg" style="color: #337AB7;"></i>
+				<div style="position: relative; left: -50%; top: -23px;">
+		            <i class="fa fa-child fa-2x" style="color: #337AB7;"></i>
 		        </div>
 			</div>
 			
@@ -26,8 +26,7 @@
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
 					<label class="control-label">ภาพถ่ายหน้าตรง *</label>
-					<!-- <input tabindex="6" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required> -->
-					<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+					<input tabindex="6" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" style="width: 220px;" />
 				</div>
 			</div>
@@ -37,26 +36,35 @@
 					<input tabindex="3" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
-					<!-- <label class="control-label">ประเภทสมาชิก *</label>
-					<input tabindex="8" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required> -->
-					
-					<label class="control-label">เลือกสิทธิ *</label>
-					<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
+					<label class="control-label">ประเภทสมาชิก *</label>
+					<select tabindex="7" name="roles" class="form-control" ng-model="user.roles[0].authority" required>
 						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
 				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
-				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+				      			ng-repeat="option in memberTypes" value="{{ option.authority }}">{{ option.name }}</option>
 				    </select>
-					
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
-					<label class="control-label">วันเดือนปีเกิด*</label>
-					<input tabindex="4" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
+				<div class="col-lg-6">
+					<label class="control-label">วันเดือนปีเกิด</label>
+					<div class="input-group">
+						<input tabindex="4" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+							current-text="{{'datepicker.today' | translate}}"
+							clear-text="{{'datepicker.clear' | translate}}"
+							close-text="{{'datepicker.close' | translate}}"
+							ng-model="formData.dateTimeStart" is-open="formData.birthDate" /> 
+							<span class="input-group-btn">
+							<button type="button" class="btn btn-default" ng-click="openBirthDate($event)">
+								<i class="glyphicon glyphicon-calendar"></i>
+							</button>
+						</span>
+					</div>
 				</div>
+				
+				
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
 					<label class="control-label">รหัสจากเครื่อง Finger Scan *</label>
-					<input tabindex="7" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
+					<input tabindex="8" name="memberTypeName" class="form-control" ng-model="data.memberTypeName" required>
 				</div>
 			</div>	
 			
@@ -77,7 +85,7 @@
 				
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeName.$invalid}">
 					<label class="control-label">เลือกสิทธิ *</label>
-					<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
+					<select tabindex="18" name="roles" class="form-control" ng-model="user.roles[0].authority" required>
 						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
 				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
 				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
@@ -85,10 +93,12 @@
 	             </div>
 	             
 	             <div class="form-group col-lg-6">
-	                 <label class="control-label">สถานะ &nbsp;&nbsp;</label>
+	                 <!-- <label class="control-label">สถานะ &nbsp;&nbsp;</label> -->
+	                 <label class="control-label">&nbsp;</label>
 	                 <div class="radio">
+	                 	<label style="font-weight: bold;">สถานะ &nbsp;&nbsp;</label>
 		                 <label class="radio-inline">
-		                     <input tabindex="18" type="radio" name="status" value="0" ng-checked="data.status == 0" ng-model="data.status">เปิด
+		                     <input tabindex="19" type="radio" name="status" value="0" ng-checked="data.status == 0" ng-model="data.status">เปิด
 		                 </label>
 		                 <label class="radio-inline">
 		                     <input type="radio" name="status" value="1" ng-checked="data.status == 1" ng-model="data.status">ปิด
@@ -103,8 +113,8 @@
 		<div class="col-lg-5 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
 			
 			<div style="position: absolute; left: 50%;">
-				<div style="position: relative; left: -50%; top: -15px;">
-		            <i class="fa fa-home fa-lg" style="color: #337AB7;"></i>
+				<div style="position: relative; left: -50%; top: -23px;">
+		            <i class="fa fa-home fa-2x" style="color: #337AB7;"></i>
 		        </div>
 			</div>
 			
